Move routes to versioned route
